# lgb_patch

./: 0001-patch-leaf-idx.patch  CMakeLists.txt  README  ftrl.cpp
